--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Blog</title>
   <link rel="stylesheet" href="css/blog.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900"">
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
 </head>
 
@@ -23,10 +23,10 @@
         <div class="col-4 d-flex justify-content-end align-items-center">
           <a class="text-muted" href="#" aria-label="Search">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24" focusable="false"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
-
+          </a>
           <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a>
         </div>
-
+      </div>
     </header>
 
     <div class="nav-scroller py-1 mb-2">
@@ -49,7 +49,7 @@
     <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark">
       <div class="col-md-6 px-0">
         <h1 class="display-4 font-italic">Title of a longer featured blog post</h1>
-        <p class="lead mb-6">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
+        <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
         <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
       </div>
     </div>
@@ -87,7 +87,7 @@
   </div>
 
   <main role="main" class="container">
-    <div>
+    <div class="row">
       <div class="col-md-8 blog-main">
         <h3 class="pb-4 mb-4 font-italic border-bottom">
           From the Firehose
@@ -157,7 +157,7 @@
           <a class="btn btn-outline-secondary disabled" href="#" tabindex="-1" aria-disabled="true">Newer</a>
         </nav>
 
-
+      </div>
 
       <aside class="col-md-4 blog-sidebar">
         <div class="p-4 mb-3 bg-light rounded">
